<resources>
    <string name="app_name">loveApp</string>
    <string name="set_text">Enter name</string>
    <string name="name_one">Enter first name</string>
    <string name="name_two">Enter second name</string>
    <string name="button_text">Find compatibility</string>
    <string name="result_text">Result of your compatibility</string>
    <string name="history_text">Search history</string>
    <string name="error_message">Fulfill all fields</string>
    <string name="loading">Loading...</string>
    <string name="compatibility">Compatibility</string>

    <string name="names_text">Names</string>
    <string name="delete_history">Delete history</string>
</resources>